Fix Vercel configuration - use rewrites instead of routes

--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,15 @@
 {
   "version": 2,
-  "name": "cloud-nodes-map",
   "builds": [
     {
       "src": "*.html",
       "use": "@vercel/static"
     }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ],
-  "headers": [
+  "rewrites": [
     {
       "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=3600"
-        }
-      ]
+      "destination": "/index.html"
     }
   ]
 }
