--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "npx serve .",
     "build": "node scripts/compress.js",
     "start": "npx serve .",
-    "compress": "node scripts/compress.js"
+    "compress": "node scripts/compress.js",
+    "verify": "node scripts/verify.js"
   },
   "keywords": [
     "cloud",
