--- a/vercel.json
+++ b/vercel.json
@@ -14,36 +14,11 @@
   ],
   "headers": [
     {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "X-Frame-Options",
-          "value": "DENY"
-        },
-        {
-          "key": "X-XSS-Protection",
-          "value": "1; mode=block"
-        },
-        {
-          "key": "Referrer-Policy",
-          "value": "strict-origin-when-cross-origin"
-        }
-      ]
-    },
-    {
       "source": "/(.*\\.json)",
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, max-age=3600, s-maxage=86400, stale-while-revalidate=604800"
-        },
-        {
-          "key": "Content-Encoding",
-          "value": "gzip"
+          "value": "public, max-age=3600, s-maxage=86400"
         }
       ]
     },
@@ -52,11 +27,7 @@
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, max-age=0, s-maxage=3600, stale-while-revalidate=86400"
-        },
-        {
-          "key": "Content-Encoding",
-          "value": "gzip"
+          "value": "public, max-age=0, s-maxage=3600"
         }
       ]
     },
@@ -65,7 +36,7 @@
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
+          "value": "public, max-age=31536000"
         }
       ]
     },
@@ -74,11 +45,9 @@
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
+          "value": "public, max-age=31536000"
         }
       ]
     }
-  ],
-  "functions": {},
-  "regions": ["hkg1", "nrt1", "syd1"]
+  ]
 }
